--- a/Páginas/contacto.html
+++ b/Páginas/contacto.html
@@ -5,93 +5,149 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="Artemis, Gin, Handcrafted, bebida, alcohol, escabio">
         <meta name="description" content="Página oficial de Artemis Handcrafted Gin.">
-        <title>Artemis Handcrafted Gin - Contacto</title> 
-        <link rel="stylesheet" href="../Estilos/style.css">
+        <title>Artemis Handcrafted Gin - Home</title> 
+        <!-- <link rel="stylesheet" href="../Estilos/style.css"> -->
+        <link rel="stylesheet" href="../Estilos/style-con-bootstrap.css">
         <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
-        <script src="https://kit.fontawesome.com/41d6bd0b26.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+         <!-- Bootstrap CSS -->
+        <link href="../bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     </head>
     <body>
-        <header>
-            <nav class="menu">
-                <a href="../index.html"><img class="Artemis_Logo animate__animated animate__fadeIn" src="../Images/Artemis Negro 2.png" alt="Logo Artemis"></a>
-                <button class="boton">
-                    <a href="#nav-target"><i class="fas fa-bars"></i></a>
-                </button>
-                <ul class="Nav Nav-visible animate__animated animate__fadeIn">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../Páginas/nuestro-gin.html">Nuestro Gin</a></li>
-                    <li><a href="../Páginas/galería.html">Galería</a></li>
-                    <li><a href="../Páginas/recetas.html">Recetas</a></li>
-                    <li><a class="active" href="../Páginas/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>              
-        </header>
-        <div class="Nav-responsive" id="nav-target">
-            <a href="#" class="close-button">X</a>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../Páginas/nuestro-gin.html">Nuestro Gin</a></li>
-                <li><a href="../Páginas/galería.html">Galería</a></li>
-                <li><a href="../Páginas/recetas.html">Recetas</a></li>
-                <li><a class="active" href="../Páginas/contacto.html">Contacto</a></li>
-            </ul>
+        <div class="container-fluid bg-artemis sticky-top">
+            <header class="container justify-content-between w-100">
+                <nav class="menu row justify-content-between align-items-center">
+                    <div class="col-md-3 col-6 col-sm-5">
+                        <a href="../index.html"><img class="Artemis_Logo animate__animated animate__fadeIn img-fluid" src="../Images/Artemis Negro 2.png" alt="Logo Artemis"></a>
+                    </div>
+                    <div class="col-6 col-md-8">
+                        <button class="navbar-toggler d-md-none navbar-dark col-3 offset-9" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                            <div class="offcanvas-header">
+                              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú</h5>
+                              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body">
+                                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                    <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                    <a class="nav-link" href="./nuestro-gin.html">Nuestro Gin</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./galería.html">Galería</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./recetas.html">Recetas</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="./contacto.html">Contacto</a>
+                                    </li>
+                                </ul>
+                            </div>
+                          </div>
+                        <ul class="nav Nav-visible animate__animated animate__fadeIn d-none d-md-flex justify-content-end">
+                            <li class="nav-item"><a class="py-0 nav-link link-light" href="../index.html">Home</a></li>
+                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./nuestro-gin.html">Nuestro Gin</a></li>
+                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./galería.html">Galería</a></li>
+                            <li class="nav-item"><a class="py-0 nav-link link-light" href="./recetas.html">Recetas</a></li>
+                            <li class="nav-item"><a class="py-0 nav-link active link-light" href="./contacto.html">Contacto</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </header>     
         </div>
-        <section id="sec_contact">
-            <div class="Cont_titulo">
-                <h2 class="titulo">Contactanos!</h2>
+        <section class="sec_contact py-2">
+            <div class="container-fluid">
+                <div class="container">
+                    <div class="Cont_titulo row">
+                        <h2 class="titulo col-md-4 offset-md-4 col-8 offset-2 bg-artemis font-artemis text-white text-center">Contactanos!</h2>
+                    </div>
+                    <form class="formulario bg-artemis py-3" autocomplete="on">
+                        <div class="Main_form row px-3 py-1 text-center">
+                            <div class="col-4 offset-4 form-floating mb-3">
+                                <input type="text" name="fnombre" class="form-control" id="floatingInput" required placeholder="Ejemplo" autofocus>
+                                <label for="floatingInput">Nombre</label>
+                            </div>
+                        </div> 
+                        <div class="row px-3 py-1 text-center">
+                            <div class="col-4 offset-4 form-floating mb-3">
+                                <input type="text" name="fapellido" class="form-control" id="floatingInput1" required placeholder="Ejemplo">
+                                <label for="floatingInput1">Apellido</label>
+                            </div>
+                        </div>   
+                        <div class="row px-3 py-1 text-center">
+                            <div class="col-6 offset-3 form-floating mb-3">                                
+                                <input type="email" name="fmail" class="form-control" id="floatingInput2" required placeholder="ejemplo@mail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+                                <label for="floatingInput2">Mail</label>
+                            </div>
+                        </div>  
+                        <div class="row px-3 py-1 text-center text-white">
+                            <div class="col-6 offset-3"><p>Sexo</p></div>
+                        </div>
+                        <div class="text-center text-white">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">M</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                <label class="form-check-label" for="inlineRadio2">F</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                <label class="form-check-label" for="inlineRadio3">Otro</label>
+                              </div>
+                        </div>                            
+                        <div class="fselect row px-3 py-1 text-center text-white">
+                            <p>¿Ya probaste Artemis?</p>
+                            <select class="col-6 offset-3 col-md-2 offset-md-5" id="fselect" required>
+                                <option value="si">Si</option>
+                                <option value="no">No</option>
+                            </select>
+                        </div>
+                        <div class="row px-3 py-1 text-center">
+                            <div><textarea placeholder="Dejá tus comentarios aquí" id="fcoments" cols="50" rows="10"></textarea></div>
+                        </div>
+                        <div class="fcheck text-center text-white">
+                            <label for="fcheck">¿Desea recibir actualizaciones de nuestro Gin?</label>
+                            <input type="checkbox" name="fcheck" id="fckeck">
+                        </div>
+                        <div class="botones text-center">
+                            <input type="reset">
+                            <input type="submit">
+                        </div>
+                    </form>
+                </div>
             </div>
-            
-            <form class="formulario" autocomplete="on">
-                <div class="Main_form">
-                    <label for="fnombre">Nombre</label>
-                    <input type="text" name="fnombre" id="fnombre" required placeholder="Ejemplo" autofocus>
-                    <label for="fapellido">Apellido</label>
-                    <input type="text" name="fapellido" id="fapellido" required placeholder="Ejemplo">
-                    <label for="fmail">Mail</label>
-                    <input type="email" name="fmail" id="fmail" required placeholder="ejemplo@mail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
-                </div>
-                <div class="radio">
-                    <p>Sexo</p> 
-                    <input type="radio" name="fsexo" id="fmasc" required>
-                    <label for="fmasc">M</label>
-                    <input type="radio" name="fsexo" id="ffem" required>
-                    <label for="ffem">F</label>
-                    <input type="radio" name="fsexo" id="fother" required>
-                    <label for="fother">Otro</label>
-                </div>
-                <div class="fselect">
-                    <p>¿Ya probaste Artemis?</p>
-                    <select id="fselect" required>
-                        <option value="si">Si</option>
-                        <option value="no">No</option>
-                    </select>
-                </div>
-                <textarea placeholder="Dejá tus comentarios aquí" id="fcoments" cols="50" rows="10"></textarea>
-                <div class="fcheck">
-                    <label for="fcheck">¿Desea recibir actualizaciones de nuestro Gin?</label>
-                    <input type="checkbox" name="fcheck" id="fckeck">
-                </div>
-                <div class="botones">
-                    <input type="reset">
-                    <input type="submit">
-                </div>
-            </form>
         </section>
         <footer>
-            <div class="aclaraciones">
-                <p>beber con moderación | prohibida su venta a menores de 18 años | si conducis, no tomes alcohol</p>
-            </div>
-            <div class="social-media">
-                <a href="https://www.instagram.com/destileria.artemis/" target="_blank"><i class="fab fa-instagram"></i></a>
-            </div>
-            <div class="autor">
-                <p id="autor">autor: Gaston Pero</p>
-                <p id="copyright">Copyright 2022</p>
+            <div class="container-fluid bg-artemis">
+                <div class="container pt-3">
+                    <div class="row">
+                        <div class="aclaraciones col-md-6 col-8">
+                            <p class="text-white text-uppercase">beber con moderación | prohibida su venta a menores de 18 años | si conducis, no tomes alcohol</p>
+                        </div>
+                        <div class="social-media col-1 fs-1 offset-md-5 offset-3">
+                            <a href="https://www.instagram.com/destileria.artemis/" target="_blank"><i class="fab fa-instagram text-white"></i></a>
+                        </div>
+                        <div class="autor">
+                            <p class="text-white text-uppercase my-0" id="autor">autor: Gaston Pero</p>
+                            <p class="text-white text-uppercase" id="copyright">Copyright 2022</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </footer>
+        <script src="https://kit.fontawesome.com/41d6bd0b26.js" crossorigin="anonymous"></script>
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="../bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
