--- a/Páginas/galería.html
+++ b/Páginas/galería.html
@@ -18,7 +18,7 @@
 
     </head>
     <body>
-        <div class="container-fluid bg-black" style="--bs-bg-opacity: .92;">
+        <div class="container-fluid bg-artemis sticky-top">
             <header class="container justify-content-between w-100">
                 <nav class="menu row justify-content-between align-items-center">
                     <div class="col-md-3 col-6 col-sm-5">
@@ -34,22 +34,23 @@
                               <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                             </div>
                             <div class="offcanvas-body">
-                              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                <li class="nav-item">
-                                  <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                  <a class="nav-link" href="./nuestro-gin.html">Nuestro Gin</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link active" href="./galería.html">Galería</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./recetas.html">Recetas</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./contacto.html">Contacto</a>
-                                </li>
+                                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                    <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                    <a class="nav-link" href="./nuestro-gin.html">Nuestro Gin</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="./galería.html">Galería</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./recetas.html">Recetas</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                                    </li>
+                                 </ul>
                             </div>
                           </div>
                         <ul class="nav Nav-visible animate__animated animate__fadeIn d-none d-md-flex justify-content-end">
@@ -68,7 +69,7 @@
                 <div class="container">
                     <div class="Video row">
                         <div class="col-12 offset-0 col-md-6 offset-md-3 text-center text-light bg-artemis font-artemis my-2 pt-2"><h2>¿Cómo preparo un buen gin?</h2></div>
-                        <div class="col-12 offset-0 text-center"><iframe width="420" height="240" src="https://www.youtube.com/embed/bh6AcRrnKhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div> 
+                        <div class="col-12 offset-0 text-center"><iframe src="https://www.youtube.com/embed/bh6AcRrnKhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div> 
                     </div>           
                     <div id="carouselExampleControls" class="galeria_principal d-lg-none row carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
