--- a/Páginas/nuestro-gin.html
+++ b/Páginas/nuestro-gin.html
@@ -18,7 +18,7 @@
 
     </head>
     <body>
-        <div class="container-fluid bg-black" style="--bs-bg-opacity: .92;">
+        <div class="container-fluid bg-artemis sticky-top">
             <header class="container justify-content-between w-100">
                 <nav class="menu row justify-content-between align-items-center">
                     <div class="col-md-3 col-6 col-sm-5">
@@ -34,22 +34,23 @@
                               <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                             </div>
                             <div class="offcanvas-body">
-                              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                <li class="nav-item">
-                                  <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                  <a class="nav-link active" href="./nuestro-gin.html">Nuestro Gin</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./galería.html">Galería</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./recetas.html">Recetas</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./contacto.html">Contacto</a>
-                                </li>
+                                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                    <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                    <a class="nav-link active" href="./nuestro-gin.html">Nuestro Gin</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./galería.html">Galería</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./recetas.html">Recetas</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                                    </li>
+                                </ul>
                             </div>
                           </div>
                         <ul class="nav Nav-visible animate__animated animate__fadeIn d-none d-md-flex justify-content-end">
