--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link href="./bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </head>
     <body>
-        <div class="container-fluid bg-black" style="--bs-bg-opacity: .92;">
+        <div class="container-fluid bg-artemis sticky-top">
             <header class="container justify-content-between w-100">
                 <nav class="menu row justify-content-between align-items-center">
                     <div class="col-md-3 col-6 col-sm-5">
@@ -35,22 +35,23 @@
                               <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                             </div>
                             <div class="offcanvas-body">
-                              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                                <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./Páginas/nuestro-gin.html">Nuestro Gin</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./Páginas/galería.html">Galería</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./Páginas/recetas.html">Recetas</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="./Páginas/contacto.html">Contacto</a>
-                                </li>
+                                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./Páginas/nuestro-gin.html">Nuestro Gin</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./Páginas/galería.html">Galería</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./Páginas/recetas.html">Recetas</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="./Páginas/contacto.html">Contacto</a>
+                                    </li>
+                                </ul>
                             </div>
                           </div>
                         <ul class="nav Nav-visible animate__animated animate__fadeIn d-none d-md-flex justify-content-end">
